plugins {
    id 'org.springframework.boot' version '3.0.0-RC2'
    id 'io.spring.dependency-management' version '1.1.0'
    // id 'org.graalvm.buildtools.native' version '0.9.17'
    id 'java'
    // id 'eclipse'
    id "org.sonarqube" version "3.5.0.2730" apply false
    id "com.diffplug.spotless" version "6.11.0"
}
apply from: "gradle/code-quality.gradle"
if (project.hasProperty("ci")) {
    apply from: "gradle/owasp.gradle"
}

group = 'com.example.mfscreener'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
  mavenCentral()
  maven { url 'https://repo.spring.io/milestone' }
}

ext {
    set('testcontainersVersion', "1.17.6")
    set('mapstructVersion', "1.5.3.Final")
    set('mapstructSpringExtensionsVersion', "0.1.2")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0-RC1'
    implementation 'net.ttddyy:datasource-proxy:1.8.1'
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.mapstruct.extensions.spring:mapstruct-spring-annotations:${mapstructSpringExtensionsVersion}"
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    annotationProcessor "org.mapstruct.extensions.spring:mapstruct-spring-extensions:${mapstructSpringExtensionsVersion}"

    // If you are using mapstruct in test code
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    testAnnotationProcessor "org.mapstruct.extensions.spring:mapstruct-spring-extensions:${mapstructSpringExtensionsVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '-Amapstruct.suppressGeneratorTimestamp=true',
            '-Amapstruct.suppressGeneratorVersionInfoComment=true',
            '-Amapstruct.verbose=true',
            '-Amapstruct.defaultComponentModel=spring'
    ]
}

test {
    useJUnitPlatform()
    exclude "**/*IT*", "**/*IntegrationTest*", "**/*IntTest*"
    testLogging {
        events = ["PASSED", "FAILED", "SKIPPED"]
        showStandardStreams = true
        exceptionFormat = "full"
    }
}

task integrationTest(type: Test) {
    useJUnitPlatform()

    include "**/*IT*", "**/*IntegrationTest*", "**/*IntTest*"
    shouldRunAfter test

    testLogging {
        events = ["PASSED", "FAILED", "SKIPPED"]
        showStandardStreams = true
        exceptionFormat = "full"
    }
}

check.dependsOn integrationTest

task testReport(type: TestReport) {
    destinationDir = file("$buildDir/reports/tests")
    reportOn test
}

task integrationTestReport(type: TestReport) {
    destinationDir = file("$buildDir/reports/tests")
    reportOn integrationTest
}

spotless {
  sql{
      target 'src/main/resources/**/*.sql' // have to set manually
      dbeaver()
  }
  java {
      removeUnusedImports()
      googleJavaFormat('1.15.0')
        .aosp()
        .reflowLongStrings()
        .groupArtifact('com.google.googlejavaformat:google-java-format')
      // fix formatting of type annotations
      formatAnnotations()
      // make sure every file has the following copyright header.
      // optionally, Spotless can set copyright years by digging
      // through git history (see "license" section below)
      licenseHeader '/* Licensed under Apache-2.0 $YEAR. */'
  }
}

sourceSets {
    main {
        java.srcDirs += 'build/generated/sources/annotationProcesor/java'
    }
}

//adding task to fix issue with ConversationService not found in VSCode
// eclipse {
//     classpath {
//         containers 'org.eclipse.buildship.core.gradleclasspathcontainer'
//         file.whenMerged { cp ->
//             def entries = cp.entries;
//             def src = new org.gradle.plugins.ide.eclipse.model.SourceFolder('build/generated/sources/annotationProcessor/java/main/', null)
//             entries.add(src)
//         } 
//     }
// }
